--- a/app/globals.css
+++ b/app/globals.css
@@ -18,12 +18,20 @@
 
 body {
   color: rgb(35, 35, 35);
+  font-family: "caros";
   /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+}
+
+.glass-bg {
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(15.9px);
+  -webkit-backdrop-filter: blur(15.9px);
 }
 
 @layer utilities {
